# qwen3_from_scratch

./: .clang-format  CMakeLists.txt  LICENSE  Makefile  README.md
docs/: BASIC_ARCHITECTURE.md  DOCS_INDEX.md  IMPLEMENTATION_GUIDE.md  INSTALL.md  KVCACHE_ARCHITECTURE.md  QUICKSTART.md  architecture.md  operators.md  qwen3_arch.md  qwen3_inference_pipeline.md
scripts/: dump_reference.py  embedding_output_3.txt
src/: logger.h  main.cpp  operator.hpp  qwen3.cpp  qwen3.h  qwen3_chat.cpp  qwen3_model.cpp  qwen3_model.h  tensor.h  tokenizer.cpp  tokenizer.h  type.h
tutorial/: 00_introduction.md  01_arch.md  02_environment.md  03_tensor.md  04_tokenizer.md  05_operators.md
